とりあえずファイルを分割

--- a/Split_compilation_and_linking/Makefile
+++ b/Split_compilation_and_linking/Makefile
@@ -3,7 +3,7 @@ SRCS=$(wildcard *.c)
 OBJS=$(SRCS:.c=.o)
 
 9cc: $(OBJS)
-		$(CC) -o 9cc $(OBJS) $(LDFLAGS)
+		$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 $(OBJS): 9cc.h
 
